# gurunet

./: .env.example  .gitattributes  .gitignore  Detailed Extraction of the retention strategies.txt  LICENSE  NOTICE  README.md  context.txt  format.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  tsconfig.json  vercel.json
apps/android/: app.json  package.json  tsconfig.json
apps/ios/: app.json  eas.json  package.json
apps/windows/: package.json  tsconfig.json  vite.config.ts
apps/windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/src/: lib.rs  main.rs
docs/: platform-expansion.md
prisma/: schema.prisma
scripts/: verify-challenge-generation.mjs  verify-platform.mjs  verify-time.mjs
src/: auth.ts
src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts
src/components/: account-settings-page.tsx  admin-backend.tsx  gurunet-app.tsx
src/lib/: admin-auth.ts  admin-overview.ts  admin-reset.ts  ai-jobs.ts  api.ts  app-api.ts  app-auth.ts  app-oauth.ts  app-public.ts  app-service.ts  auth.ts  challenge-blueprints.ts  challenge-cases.ts  challenge-fingerprint.ts  challenge-prompt.ts  challenges.ts  daily-challenge-jobs.ts  database-url.ts  db-mappers.ts  disciplines.ts  domain.ts  env.ts  import-json.ts  learning-export.ts  notification-jobs.ts  notification-scheduler.ts  openai-service.ts  prisma.ts  provider-revocation.ts  recovery.ts  runtime-database-url.ts  runtime-env.ts  scoring.ts  site.ts  storage.ts  store.ts  (+4 more)
(+110 files in other folders)
